# action-terminal

./: .gitignore  README.md  pyproject.toml  requirements.txt
action/app/: action_composer.py  action_server.py  action_server_runner.py  action_server_types.py  action_service.py  action_service_types.py  str_utils.py  terminal.py  terminal_types.py  test_utils.py  timer.py
action/tests/integration/: test_action_server.py  test_terminal.py
action/tests/unit/: test_str_utils.py  test_terminal.py
